docs/content/v1.1/comparisons/google-spanner.md
---
title: Google Cloud Spanner
linkTitle: Google Cloud Spanner
description: Google Cloud Spanner
aliases:
  - /comparisons/google-spanner/
menu:
  v1.1:
    parent: comparisons
    weight: 1120
---

YugaByte DB’s storage and replication architecture is similar to that of [Google Cloud Spanner](https://cloud.google.com/spanner/) which is also a CP database with high write availability. While Google Cloud Spanner leverages Google’s proprietary (and expensive) network infrastructure, YugaByte DB is designed work on commodity infrastructure used by most enterprise users.

Following blogs highlight how YugaByte DB works as a Spanner derivative.

- [Implementing Distributed Transactions the Google Way: Percolator vs. Spanner](https://blog.yugabyte.com/implementing-distributed-transactions-the-google-way-percolator-vs-spanner/)

- [Google Spanner vs. Calvin: Is There a Clear Winner in the Battle for Global Consistency at Scale?](https://blog.yugabyte.com/google-spanner-vs-calvin-global-consistency-at-scale/)


Following blogs highlight how YugaByte DB differs from Google Cloud Spanner.

- [Practical Tradeoffs in Google Cloud Spanner, Azure Cosmos DB and YugaByte DB](https://blog.yugabyte.com/practical-tradeoffs-in-google-cloud-spanner-azure-cosmos-db-and-yugabyte-db) 

- [New to Google Cloud Databases? 5 Areas of Confusion That You Better Be Aware of](https://blog.yugabyte.com/new-to-google-cloud-databases-5-areas-of-confusion-that-you-better-be-aware-of/)


